--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "better-sqlite3": "^8.4.0",
     "rescript": "11.0.0-beta.1"
   },
   "dependencies": {
     "@rescript/core": "^0.3.1"
+  },
+  "peerDependencies": {
+    "better-sqlite3": "^8.4.0"
   }
 }
